<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/gamePanelLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgComputer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:contentDescription="@string/img_computer_desc"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_rock" />

                    <TextView
                        android:id="@+id/txtComputer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/img_computer_title"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgMine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:contentDescription="@string/img_mine_desc"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_rock" />

                    <TextView
                        android:id="@+id/txtMine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/img_mine_title"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/resultTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                >

                <TextView
                    android:id="@+id/txtResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/choose_one"
                    android:textAlignment="center"
                    android:textSize="38sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gameButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRock"
                    style="@style/Button3DText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_rock"
                    android:text="@string/txt_rock" />

                <Button
                    android:id="@+id/btnPaper"
                    style="@style/Button3DText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_paper"
                    android:text="@string/txt_paper" />

                <Button
                    android:id="@+id/btnScissors"
                    style="@style/Button3DText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/color_scissors"
                    android:text="@string/txt_scissors" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>